--- a/Index.css
+++ b/Index.css
@@ -1,29 +1,57 @@
+body {
+  background-color: #f5f5f5;
+}
+
+
+
 /*ESTILOS DE LA NAVEGACION*/
 nav {
-    background-color: #eee;
+  background-color: #2196f3;
+  height: 60px;
+  line-height: 60px;
+}
+
+.brand-logo {
+  font-size: 1.5rem;
+}
+
+nav ul li a {
+  color: #fff;
+}
+
+.sidenav-trigger {
+  display: none;
+}
+
+@media only screen and (max-width: 992px) {
+  .sidenav-trigger {
+    display: block;
   }
-  
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+
+  #nav-mobile {
+    display: none;
   }
-  
-  li {
-    margin-right: 1em;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+}
+
 
 /*ESTILOS PRINCIPAL*/
 
+.container {
+  margin-top: 50px;
+}
 
+h1 {
+  color: #2196f3;
+}
 
+p {
+  font-size: 1.2rem;
+}
+
+.btn {
+  font-size: 1.2rem;
+  border-radius: 20px;
+}
 
 
 
