--- a/Index.css
+++ b/Index.css
@@ -1,30 +1,47 @@
+body {
+  background-color: #f5f5f5;
+}
+
+
 /*ESTILOS DE LA NAVEGACION*/
 nav {
-    background-color: #eee;
+  background-color: #2196f3;
+  height: 60px;
+  line-height: 60px;
+}
+
+.brand-logo {
+  font-size: 1.5rem;
+}
+
+nav ul li a {
+  color: #fff;
+}
+
+.sidenav-trigger {
+  display: none;
+}
+
+@media only screen and (max-width: 992px) {
+  .sidenav-trigger {
+    display: block;
   }
-  
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+
+  #nav-mobile {
+    display: none;
   }
-  
-  li {
-    margin-right: 1em;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+}
 
-/*ESTILOS PRINCIPAL*/
+/*ESTILOS DEL BTN DE CAMBIO DE MODOS*/
 
-
-
-
+.fixed-action-btn {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+}
+.dark-mode {
+  background-color: #383636;
+}
 
 
 
