--- a/Index.css
+++ b/Index.css
@@ -300,4 +300,15 @@ nav ul li a {
 
 
 /*ESTILOS DEL FOOTER*/
-
+.p-2{
+  text-align: center;
+  background-color: #333;
+  height:50px;
+  line-height:50px;
+  bottom:0;
+  left:0;
+  width:100%;
+}
+.bg-dark{
+  color: #fff;
+}
